# rootly-rs

./: .gitignore  Cargo.toml  Makefile  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml
examples/: list_incidents.rs
spec/: swagger.json
src/: client.rs  error.rs  lib.rs  retry.rs
tests/: client_test.rs
xtask/: Cargo.toml
xtask/src/: main.rs
